roles/vdm/templates/transformers/networking-k8s-io-ingress-patch.yaml
---
apiVersion: builtin
kind: PatchTransformer
metadata:
  name: tls-networking-ingress-label-hack
patch: |-
  - op: add
    path: /metadata/labels/sas.com~1deployment-base
    value: generic
target:
  group: networking.k8s.io
  version: v1beta1
  kind: Ingress
  annotationSelector: sas.com/component-name in (aaservices, aaservices, aaservices2, aaservices, aaservices2, aaservices, aaservices, aaservices, annotations, appregistry, audit, authorizatn, busrulesref, cas-control, cas-control, cas-control, cas-administration, cas-administration, sas-transform-services, textcategorization, textcategorization, textcategorization, comments, compservice, textconcepts, textconcepts, textconcepts, configuratn, credentials, dataagentservices, dataagentservices, sa [...]
---
apiVersion: builtin
kind: PatchTransformer
metadata:
  name: backend-tls-networking-ingress-patch
patch: |-
  apiVersion: networking.k8s.io/v1beta1
  kind: Ingress
  metadata:
    name: wildcard
    annotations:
      nginx.ingress.kubernetes.io/backend-protocol: HTTPS
target:
  group: networking.k8s.io
  version: v1beta1
  kind: Ingress
---
apiVersion: builtin
kind: PatchTransformer
metadata:
  name: backend-tls-networking-ingress-port-patch
patch: |-
  - op: replace
    path: /spec/rules/0/http/paths/0/backend/servicePort
    value: 443
target:
  group: networking.k8s.io
  version: v1beta1
  kind: Ingress
  labelSelector: sas.com/deployment-base=generic
---
apiVersion: builtin
kind: PatchTransformer
metadata:
  name: user-networking-k8s-io-ingress-patches
patch: |-
  - op: add
    path: /spec/rules/0/host
    value: $(INGRESS_HOST)
  - op: add
    path: /spec/tls
    value: [{hosts: [$(INGRESS_HOST)], secretName: ingress-cert}]
target:
  group: networking.k8s.io
  version: v1beta1
  kind: Ingress
  name: .*
vars:
- name: INGRESS_HOST
  objref:
    kind: ConfigMap
    name: ingress-input
    apiVersion: v1
  fieldref:
    fieldpath: data.INGRESS_HOST
